arrays en numpy

--- a/curso_de_python_para_ciencia_de_datos/arrays_en_numpy.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/arrays_en_numpy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escalares"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -20,6 +27,205 @@
     "print(escalar)\n",
     "print(type(escalar))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30 29 35 31 33 36 42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.array([30, 29, 35, 31, 33, 36, 42])\n",
+    "print(vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = np.array([[1, 2, 3],[4, 5, 6], [7, 8, 9]])\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2]\n",
+      "  [3 4]\n",
+      "  [5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor = np.array([[[1, 2], [3, 4], [5, 6], [7, 8]]])\n",
+    "print(tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aranges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_arange = np.arange(10)\n",
+    "print(array_arange)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matriz Identidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "eye_matrix = np.eye(6)\n",
+    "print(eye_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matriz Diagonal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0 0 0]\n",
+      " [0 2 0 0 0 0 0]\n",
+      " [0 0 3 0 0 0 0]\n",
+      " [0 0 0 4 0 0 0]\n",
+      " [0 0 0 0 5 0 0]\n",
+      " [0 0 0 0 0 6 0]\n",
+      " [0 0 0 0 0 0 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "diag = np.diag([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(diag)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.76268065 0.42052203 0.39420656]\n",
+      " [0.22973272 0.20898837 0.15487864]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random = np.random.random((2, 3))\n",
+    "print(random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
