--- a/curso_de_python_para_ciencia_de_datos/broadcasting.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/broadcasting.ipynb
@@ -183,6 +183,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stacking arrays Horizontal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stacked_h = np.hstack((array_a, array_b))\n",
+    "print(stacked_h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Division o Split de arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[array([1, 2, 3]), array([4, 5, 6]), array([7, 8, 9])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_c = np.arange(1, 10)\n",
+    "split_array = np.split(array_c, 3)\n",
+    "print(array_c)\n",
+    "print(split_array)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
