paso 4 usando reshape, transposed, aplandos e inversiones

--- a/curso_de_python_para_ciencia_de_datos/Ejercicio_Caso_practivo.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/Ejercicio_Caso_practivo.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
       "Total de ventas por mes:  [ 530  630  720  810  770  770  740  780  860  910  990 1050]\n",
       "Promedio de ventas por producto: [229.16666667 257.5        310.        ]\n",
       "Mes con mayor ventas: Diciembre\n",
-      "mes con menor ventas: Diciembre\n"
+      "mes con menor ventas: Enero\n"
      ]
     }
    ],
@@ -99,6 +99,83 @@
     "print(f\"Mes con mayor ventas: {mes_mayor_ventas}\")\n",
     "print(f\"mes con menor ventas: {mes_menor_ventas}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ventas Matrix: \n",
+      " [[150 200 250 300 220 210 180 190 230 240 280 300]\n",
+      " [180 210 230 250 270 260 240 250 270 290 310 330]\n",
+      " [200 220 240 260 280 300 320 340 360 380 400 420]]\n",
+      "Ventas Reshaped (3, 4, 3):\n",
+      " [[[150 200 250]\n",
+      "  [300 220 210]\n",
+      "  [180 190 230]\n",
+      "  [240 280 300]]\n",
+      "\n",
+      " [[180 210 230]\n",
+      "  [250 270 260]\n",
+      "  [240 250 270]\n",
+      "  [290 310 330]]\n",
+      "\n",
+      " [[200 220 240]\n",
+      "  [260 280 300]\n",
+      "  [320 340 360]\n",
+      "  [380 400 420]]]\n",
+      "Ventas Transposed:\n",
+      " [[150 180 200]\n",
+      " [200 210 220]\n",
+      " [250 230 240]\n",
+      " [300 250 260]\n",
+      " [220 270 280]\n",
+      " [210 260 300]\n",
+      " [180 240 320]\n",
+      " [190 250 340]\n",
+      " [230 270 360]\n",
+      " [240 290 380]\n",
+      " [280 310 400]\n",
+      " [300 330 420]]\n",
+      "Ventas Invertidas: \n",
+      " [[300 280 240 230 190 180 210 220 300 250 200 150]\n",
+      " [330 310 290 270 250 240 260 270 250 230 210 180]\n",
+      " [420 400 380 360 340 320 300 280 260 240 220 200]]\n",
+      "Ventas Aplanadas:\n",
+      " [150 200 250 300 220 210 180 190 230 240 280 300 180 210 230 250 270 260\n",
+      " 240 250 270 290 310 330 200 220 240 260 280 300 320 340 360 380 400 420]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 4: Operaciones avanzadas con Numpy\n",
+    "# Reshape y Transposicion\n",
+    "ventas_matrix = np.array([ventas_A, ventas_B, ventas_C])\n",
+    "ventas_reshaped = ventas_matrix.reshape(3, 4, 3)\n",
+    "ventas_transposed = ventas_matrix.T\n",
+    "\n",
+    "print(\"Ventas Matrix: \\n\", ventas_matrix)\n",
+    "print(\"Ventas Reshaped (3, 4, 3):\\n\", ventas_reshaped)\n",
+    "print(\"Ventas Transposed:\\n\", ventas_transposed)\n",
+    "\n",
+    "# Invertir arrays y aplanar matrices\n",
+    "ventas_inverted = ventas_matrix[:, ::-1]\n",
+    "ventas_flattened = ventas_matrix.flatten()\n",
+    "\n",
+    "print(\"Ventas Invertidas: \\n\", ventas_inverted)\n",
+    "print(\"Ventas Aplanadas:\\n\", ventas_flattened)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
