--- a/curso_de_python_para_ciencia_de_datos/Ejercicio_Caso_practico.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/Ejercicio_Caso_practico.ipynb
@@ -172,10 +172,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elementos unicos en las ventas:  [150 180 190 200 210 220 230 240 250 260 270 280 290 300 310 320 330 340\n",
+      " 360 380 400 420]\n",
+      "Conteos de elemntos unicos en las ventas:  [1 2 1 2 2 2 2 3 3 2 2 2 1 3 1 1 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 5: Analisis de elementos unicos y sus conteos\n",
+    "unique_ventas, counts_ventas = np.unique(ventas_flattened, return_counts=True)\n",
+    "print(\"Elementos unicos en las ventas: \", unique_ventas)\n",
+    "print(\"Conteos de elemntos unicos en las ventas: \", counts_ventas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ventas del primer trimestre: \n",
+      " [[150 200 250]\n",
+      " [180 210 230]\n",
+      " [200 220 240]]\n",
+      "Meses con ventas totales superiores a 800: ['Abril' 'Septiembre' 'Octubre' 'Noviembre' 'Diciembre']\n",
+      "Ventas totales superiores a 800: [ 810  860  910  990 1050]\n",
+      "Ventas en meses seleccionados:\n",
+      " [[150 250 220 210 230 280]\n",
+      " [180 230 270 260 270 310]\n",
+      " [200 240 280 300 360 400]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 6: Indexacion y slicing \n",
+    "# Seleccionar ventas del primer trimestre\n",
+    "ventas_primer_trimestre = ventas_matrix[:, :3]\n",
+    "print(\"Ventas del primer trimestre: \\n\", ventas_primer_trimestre)\n",
+    "\n",
+    "# Indexacion booleana para seleccionar meses con ventas totales superiores a 800\n",
+    "meses_altas_ventas = meses[total_ventas_por_mes > 800]\n",
+    "ventas_altas = total_ventas_por_mes[total_ventas_por_mes > 800]\n",
+    "print(\"Meses con ventas totales superiores a 800:\", meses_altas_ventas)\n",
+    "print(\"Ventas totales superiores a 800:\", ventas_altas)\n",
+    "\n",
+    "# Seleccion avanzada\n",
+    "indices = [0, 2, 4, 5, 8, 10]\n",
+    "ventas_indices_seleccionados = ventas_matrix[:, indices]\n",
+    "print(\"Ventas en meses seleccionados:\\n\", ventas_indices_seleccionados)"
+   ]
   }
  ],
  "metadata": {
