--- a/curso_de_python_para_ciencia_de_datos/ejercicios_practivos_numpy/operaciones_basicas_arrays.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/ejercicios_practivos_numpy/operaciones_basicas_arrays.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,8 @@
      "text": [
       "Media del data set: 57.44444444444444\n",
       "Media del data set: 67.0\n",
-      "Media del data set: 484.02469135802465\n"
+      "Media del data set: 484.02469135802465\n",
+      "Desviacion estandar: 22.000561160071\n"
      ]
     }
    ],
@@ -68,10 +69,61 @@
     "media = np.mean(datos)\n",
     "mediana = np.median(datos)\n",
     "varianza = np.var(datos)\n",
+    "desviacion_std = np.std(datos)\n",
     "\n",
     "print(f\"Media del data set: {media}\")\n",
     "print(f\"Media del data set: {mediana}\")\n",
-    "print(f\"Media del data set: {varianza}\")"
+    "print(f\"Media del data set: {varianza}\")\n",
+    "print(f\"Desviacion estandar: {desviacion_std}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crea dos matrices de 2x2 y realiza las operaciones de suma, resta, multiplicación (producto matricial) y cálculo de la inversa de una de ellas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "Suma matricial es: \n",
+      " [[ 6  8]\n",
+      " [10 12]]\n",
+      "Resta matricial es: \n",
+      " [[-4 -4]\n",
+      " [-4 -4]]\n",
+      "Producto matricial (multiplicacion) es: \n",
+      " [[ 5 12]\n",
+      " [21 32]]\n",
+      "La inversa de la matriz 1 es: \n",
+      " [[-2.   1. ]\n",
+      " [ 1.5 -0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz1 = np.array([[1, 2], [3, 4]])\n",
+    "matriz2 = np.array([[5, 6], [7, 8]])\n",
+    "\n",
+    "suma_matricial = matriz1 + matriz2\n",
+    "resta_matricial = matriz1 - matriz2\n",
+    "multiplicacion = matriz1 * matriz2\n",
+    "inversa = np.linalg.inv(matriz1)\n",
+    "\n",
+    "print(matriz1)\n",
+    "print(\"Suma matricial es: \\n\", suma_matricial)\n",
+    "print(\"Resta matricial es: \\n\", resta_matricial)\n",
+    "print(\"Producto matricial (multiplicacion) es: \\n\", multiplicacion)\n",
+    "print(\"La inversa de la matriz 1 es: \\n\", inversa)"
    ]
   },
   {
