--- a/curso_de_python_para_ciencia_de_datos/ejercicios_practivos_numpy/operaciones_basicas_arrays.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/ejercicios_practivos_numpy/operaciones_basicas_arrays.ipynb
@@ -127,6 +127,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejercicio 4. Resuelve el sistema de ecuaciones lineales dado por Ax=b, donde A es una matriz 2x2 y b es un vector de 2 elementos. Ax=bAx = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solucion del sistem de ecuaciones:  [1. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[2, 3], [1, 2]])\n",
+    "b = np.array([8, 5])\n",
+    "\n",
+    "x = np.linalg.solve(A, b)\n",
+    "print(\"solucion del sistem de ecuaciones: \", x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
