--- a/curso_de_python_para_ciencia_de_datos/ejercicios_practivos_numpy/operaciones_basicas_arrays.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/ejercicios_practivos_numpy/operaciones_basicas_arrays.ipynb
@@ -157,6 +157,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejercicio 5. Genera un array de 1000 números aleatorios que sigan una distribución normal con media 0 y desviación estándar 1. Calcula la media y desviación estándar del array generado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media de los datos simulados:  0.013255241794121965\n",
+      "Desviacion estandar de los datos simulados:  0.9779301422334473\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "datos_silumados = np.random.normal(0, 1, 1000)\n",
+    "media_simulada = np.mean(datos_silumados)\n",
+    "desviacion_simulada = np.std(datos_silumados)\n",
+    "\n",
+    "print(\"Media de los datos simulados: \", media_simulada)\n",
+    "print(\"Desviacion estandar de los datos simulados: \", desviacion_simulada)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
