explorando data sets con pandas

--- a/curso_de_python_para_ciencia_de_datos/Pandas_Clases/pandas_dataset.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/Pandas_Clases/pandas_dataset.ipynb
@@ -51,6 +51,337 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estructuras y Funciones en Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['InvoiceNo', 'StockCode', 'Description', 'Quantity', 'InvoiceDate',\n",
+      "       'UnitPrice', 'CustomerID', 'Country'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nombres de columnas\n",
+    "columns_names = retail_data.columns\n",
+    "print(columns_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de filas: 541909\n",
+      "Numero de columnas: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_rows, num_columns = retail_data.shape\n",
+    "print(f\"Numero de filas: {num_rows}\")\n",
+    "print(f\"Numero de columnas: {num_columns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          6\n",
+      "1          6\n",
+      "2          8\n",
+      "3          6\n",
+      "4          6\n",
+      "          ..\n",
+      "541904    12\n",
+      "541905     6\n",
+      "541906     4\n",
+      "541907     4\n",
+      "541908     3\n",
+      "Name: Quantity, Length: 541909, dtype: int64\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "daily_sales = retail_data['Quantity']\n",
+    "print(daily_sales)\n",
+    "print(daily_sales[2]) # imprime la info de la fila N.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Quantity      UnitPrice     CustomerID\n",
+      "count  541909.000000  541909.000000  406829.000000\n",
+      "mean        9.552250       4.611114   15287.690570\n",
+      "std       218.081158      96.759853    1713.600303\n",
+      "min    -80995.000000  -11062.060000   12346.000000\n",
+      "25%         1.000000       1.250000   13953.000000\n",
+      "50%         3.000000       2.080000   15152.000000\n",
+      "75%        10.000000       4.130000   16791.000000\n",
+      "max     80995.000000   38970.000000   18287.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary = retail_data.describe()\n",
+    "print(summary)\n",
+    "# solo devuelve 3 columnas porque solo 3 tienen numeros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La media es: 9.55224954743324\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Media de una columna\n",
+    "mean_value = daily_sales.mean()\n",
+    "print(f\"La media es: {mean_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La mediana es: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mediana de una columna\n",
+    "median_value = daily_sales.median()\n",
+    "print(f\"La mediana es: {median_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La mediana es: 5176450\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Suma de una columna\n",
+    "sum_value = daily_sales.sum()\n",
+    "print(f\"La mediana es: {sum_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "541909\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contando valores no nulos\n",
+    "count_values = daily_sales.count()\n",
+    "print(count_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suma de Quantity: 120.0\n",
+      "Conteo de Quantity: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "daily_sales = pd.Series([10, 20, None, 40, 50])\n",
+    "\n",
+    "# Suma de Quantity\n",
+    "total_sum = daily_sales.sum()\n",
+    "print(f\"Suma de Quantity: {total_sum}\")\n",
+    "\n",
+    "# Conteo de Quantity\n",
+    "count_values = daily_sales.count()\n",
+    "print(f\"Conteo de Quantity: {count_values}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12/1/10 8:26</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>WHITE METAL LANTERN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12/1/10 8:26</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12/1/10 8:26</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12/1/10 8:26</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12/1/10 8:26</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  InvoiceNo StockCode                          Description  Quantity  \\\n",
+       "0    536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
+       "1    536365     71053                  WHITE METAL LANTERN         6   \n",
+       "2    536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
+       "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
+       "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
+       "\n",
+       "    InvoiceDate  UnitPrice  CustomerID         Country  \n",
+       "0  12/1/10 8:26       2.55     17850.0  United Kingdom  \n",
+       "1  12/1/10 8:26       3.39     17850.0  United Kingdom  \n",
+       "2  12/1/10 8:26       2.75     17850.0  United Kingdom  \n",
+       "3  12/1/10 8:26       3.39     17850.0  United Kingdom  \n",
+       "4  12/1/10 8:26       3.39     17850.0  United Kingdom  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retail_data.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
