--- a/curso_de_python_para_ciencia_de_datos/proyecto_personal/exploracion_limpieza.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/proyecto_personal/exploracion_limpieza.ipynb
@@ -1136,7 +1136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Realizando insights, analizando las ventas por año, semestre o trimestre"
+    "Realizando insights, analizando las ventas por año,"
    ]
   },
   {
@@ -1164,6 +1164,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analizando las ventas por semestre"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1187,6 +1194,41 @@
     "data_cleaned['Semester'] = data_cleaned['Month'].apply(lambda x: 1 if x <= 6 else 2) # Agrupando desde enero hasta junio como semestre 1 y el resto como semestre 2\n",
     "sales_by_semester = data_cleaned.groupby(['Year', 'Semester'])['TotalAmount'].sum()\n",
     "sales_by_semester"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analizando ventas por trimestre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year  Quarter\n",
+       "2010  4           552372.860\n",
+       "2011  1          1487842.180\n",
+       "      2          1679096.861\n",
+       "      3          2117546.643\n",
+       "      4          2441660.880\n",
+       "Name: TotalAmount, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_cleaned['Quarter'] = data_cleaned['Month'].apply(lambda x: (x -1) // 3 + 1)\n",
+    "sales_by_quarter = data_cleaned.groupby(['Year', 'Quarter'])['TotalAmount'].sum()\n",
+    "sales_by_quarter"
    ]
   },
   {
