paso 2, creando columnas por fechas y ventas mensuales

--- a/curso_de_python_para_ciencia_de_datos/proyecto_personal/exploracion_limpieza.ipynb
+++ b/curso_de_python_para_ciencia_de_datos/proyecto_personal/exploracion_limpieza.ipynb
@@ -1233,6 +1233,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year  Month\n",
+       "2010  12        552372.860\n",
+       "2011  1         473731.900\n",
+       "      2         435534.070\n",
+       "      3         578576.210\n",
+       "      4         425222.671\n",
+       "      5         647011.670\n",
+       "      6         606862.520\n",
+       "      7         573112.321\n",
+       "      8         615078.090\n",
+       "      9         929356.232\n",
+       "      10        973306.380\n",
+       "      11       1126815.070\n",
+       "      12        341539.430\n",
+       "Name: TotalAmount, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_by_month = data_cleaned.groupby(['Year','Month'])['TotalAmount'].sum()\n",
+    "sales_by_month"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
