analisis univariado, distribucion de sexo y numero de pinguinos por isla

--- a/curso_analisis_exploratorio_de_datos/colecta_validacion_datos.ipynb
+++ b/curso_analisis_exploratorio_de_datos/colecta_validacion_datos.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/angel/MachineLearning/python_para_machine_learning/curso_analisis_exploratorio_de_datos/.venv/lib64/python3.12/site-packages/palmerpenguins/penguins.py:2: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "import empiricaldist\n",
     "import janitor\n",
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +76,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +106,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +133,7 @@
        "(344, 8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +168,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +195,7 @@
        "np.int64(19)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f326c5337a0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f956d41a030>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +279,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +327,7 @@
        "(344, 8)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,209 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>species</th>\n",
-       "      <th>island</th>\n",
-       "      <th>bill_length_mm</th>\n",
-       "      <th>bill_depth_mm</th>\n",
-       "      <th>flipper_length_mm</th>\n",
-       "      <th>body_mass_g</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Adelie</td>\n",
-       "      <td>Torgersen</td>\n",
-       "      <td>39.1</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>181.0</td>\n",
-       "      <td>3750.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Adelie</td>\n",
-       "      <td>Torgersen</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>3800.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Adelie</td>\n",
-       "      <td>Torgersen</td>\n",
-       "      <td>40.3</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>195.0</td>\n",
-       "      <td>3250.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Adelie</td>\n",
-       "      <td>Torgersen</td>\n",
-       "      <td>36.7</td>\n",
-       "      <td>19.3</td>\n",
-       "      <td>193.0</td>\n",
-       "      <td>3450.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Adelie</td>\n",
-       "      <td>Torgersen</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>20.6</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>3650.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>339</th>\n",
-       "      <td>Chinstrap</td>\n",
-       "      <td>Dream</td>\n",
-       "      <td>55.8</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>207.0</td>\n",
-       "      <td>4000.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>340</th>\n",
-       "      <td>Chinstrap</td>\n",
-       "      <td>Dream</td>\n",
-       "      <td>43.5</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>202.0</td>\n",
-       "      <td>3400.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>341</th>\n",
-       "      <td>Chinstrap</td>\n",
-       "      <td>Dream</td>\n",
-       "      <td>49.6</td>\n",
-       "      <td>18.2</td>\n",
-       "      <td>193.0</td>\n",
-       "      <td>3775.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>Chinstrap</td>\n",
-       "      <td>Dream</td>\n",
-       "      <td>50.8</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>210.0</td>\n",
-       "      <td>4100.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343</th>\n",
-       "      <td>Chinstrap</td>\n",
-       "      <td>Dream</td>\n",
-       "      <td>50.2</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>198.0</td>\n",
-       "      <td>3775.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2009</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>333 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
-       "0       Adelie  Torgersen            39.1           18.7              181.0   \n",
-       "1       Adelie  Torgersen            39.5           17.4              186.0   \n",
-       "2       Adelie  Torgersen            40.3           18.0              195.0   \n",
-       "4       Adelie  Torgersen            36.7           19.3              193.0   \n",
-       "5       Adelie  Torgersen            39.3           20.6              190.0   \n",
-       "..         ...        ...             ...            ...                ...   \n",
-       "339  Chinstrap      Dream            55.8           19.8              207.0   \n",
-       "340  Chinstrap      Dream            43.5           18.1              202.0   \n",
-       "341  Chinstrap      Dream            49.6           18.2              193.0   \n",
-       "342  Chinstrap      Dream            50.8           19.0              210.0   \n",
-       "343  Chinstrap      Dream            50.2           18.7              198.0   \n",
-       "\n",
-       "     body_mass_g     sex  year  \n",
-       "0         3750.0    male  2007  \n",
-       "1         3800.0  female  2007  \n",
-       "2         3250.0  female  2007  \n",
-       "4         3450.0  female  2007  \n",
-       "5         3650.0    male  2007  \n",
-       "..           ...     ...   ...  \n",
-       "339       4000.0    male  2009  \n",
-       "340       3400.0  female  2009  \n",
-       "341       3775.0    male  2009  \n",
-       "342       4100.0    male  2009  \n",
-       "343       3775.0  female  2009  \n",
-       "\n",
-       "[333 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "processed_penguins_df = (\n",
     "  preprocess_penguins_df\n",
     "  .dropna()\n",
     ")\n",
     "\n",
-    "processed_penguins_df"
+    "processed_penguins_df.to_csv('./data/processed_penguins_df.csv')"
    ]
   },
   {
